# conan-libass

./: .gitignore  .travis.yml  CMakeLists.txt  FindNasm.cmake  README.md  conanfile.py  config.h.in
msvc_compat/: dirent.c  dirent.h
test_package/: CMakeLists.txt  test_package.cpp
